--- a/portfolio.html
+++ b/portfolio.html
@@ -60,27 +60,38 @@ footer{padding:20px;color:#666}
     align-items:center;
     z-index:999;
 }
+
 .modal-content{
     background:#151520;
     border-radius:20px;
     max-width:900px;
     width:95%;
     display:flex;
-    gap:20px;
-    padding:20px;
-    position:relative;
     flex-direction:column;
     align-items:center;
+    gap:15px;
+    padding:20px;
+    position:relative;
+    max-height:90vh; /* Limita altura total del modal */
+    overflow:hidden;
 }
+
 .modal-left{
     position:relative;
     flex:1;
     width:100%;
+    display:flex;
+    justify-content:center;
 }
+
 .modal-left img{
-    width:100%;
+    width:auto;
+    max-width:100%;
+    max-height:70vh; /* Limita altura de la imagen */
     border-radius:15px;
+    object-fit:contain;
 }
+
 .zoom-lens{
     position:absolute;
     width:120px;
@@ -91,12 +102,14 @@ footer{padding:20px;color:#666}
     background-repeat:no-repeat;
     border-radius:10px;
 }
+
 .modal-right{
-    flex:1;
-    text-align:left;
+    flex:0;
     width:100%;
     margin-top:10px;
+    text-align:left;
 }
+
 .back-btn{
     display:inline-block;
     margin-top:10px;
@@ -131,7 +144,7 @@ footer{padding:20px;color:#666}
     display:flex;
     gap:10px;
     overflow-x:auto;
-    margin-top:15px;
+    margin-top:10px;
     padding-bottom:5px;
     width:100%;
     justify-content:center;
@@ -148,6 +161,7 @@ footer{padding:20px;color:#666}
 .modal-thumbnails img.active{
     border-color:#6c63ff;
 }
+
 .counter{
     margin-top:5px;
     color:#aaa;
@@ -246,7 +260,7 @@ let currentIndex = 0;
 
 // Crear miniaturas dentro del modal
 function createThumbnails(){
-    modalThumbnails.innerHTML = ""; // limpiar antes de crear
+    modalThumbnails.innerHTML = "";
     allImages.forEach((img,i)=>{
         const thumb = img.cloneNode();
         thumb.classList.toggle("active", i===currentIndex);
