--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Mis Renders</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/png">
+
 
 <style>
 /* ===== COLORES ===== */
@@ -475,6 +477,7 @@ document.addEventListener("keydown", e => {
 
 </body>
 </html>
+
 
 
 
