arreglando bugsUpdate portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -320,12 +320,12 @@ body.light .counter{ color:#555; }
 <h2 class="section-title">🔥 Especiales</h2>
 <section class="gallery" data-category="especiales">
 <img src="tuenyyy f.png" data-desc="Render especial" loading="lazy">
-<img src="tuenyyy.png" data-desc="Render especial alternativo" loading="lazy">
-<img src="wazvii encadenado.png" data-desc="Render cinemático encadenado" loading="lazy">
+<img src="render1.png" data-desc="Render especial alternativo" loading="lazy">
+<img src="wazvii encadenado lus mas intensa.png" data-desc="Render cinemático encadenado" loading="lazy">
 </section>
 
 <footer>
-© 2026 · Hecho por mí 😎
+© 2026 · Jozart 😎
 </footer>
 
 <!-- MODAL -->
@@ -477,6 +477,7 @@ document.addEventListener("keydown", e => {
 
 </body>
 </html>
+
 
 
 
