boton gmailUpdate portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -269,6 +269,7 @@ body.light .counter{ color:#555; }
 <a href="https://www.instagram.com/jozart.art/" target="_blank">Instagram</a>
 <a href="https://www.tiktok.com/@soy_joseph972" target="_blank">TikTok</a>
 <a href="https://www.youtube.com/@Soy_joseph972" target="_blank">YouTube</a>
+<a href="mailto:josephjuega972@gmail.com="_blank">Gmail</a>
 </div>
 </header>
 
@@ -477,6 +478,7 @@ document.addEventListener("keydown", e => {
 
 </body>
 </html>
+
 
 
 
